[package]
name = "rust-audio-aec"
version = "0.1.0"
edition = "2021"

[lib]
name = "audio_aec"
crate-type = ["cdylib"]

[dependencies]
# Core dependencies
ringbuf = "0.4"

# Audio I/O - using portaudio for cross-platform support
portaudio = "0.7"

# Signal processing  
dasp = "0.11"

# Platform utilities
libc = "0.2"

# AEC - Using WebRTC's production-ready implementation
webrtc-audio-processing = { version = "0.4", features = ["bundled"] }

# FDAF AEC dependencies
nalgebra = "0.32"
num-complex = "0.4"
rustfft = "6.1"

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }

# Threading and async
crossbeam = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
